-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.2.0 FF
-
None
-
-
76eefab088b64f9ba4e5f5c48612bfdd3552081d (qt/qtbase/dev) f8238c302fbcd116414c25582d8c999e34a1f00a (qt/tqtc-qtbase/6.1.2)
Hi.
I observed this in QtBluetooth, but I suspect it is not related to bluetooth.
I am building for Android and test on my phone.
I have the following situation:
- I configure qtconnectivity
- I build "cmake --build ."
- I run a test "ctest -V -R tst_large"
- I change some code
- I build again "cmake --build ."
- I run the tests again "ctest -V -R tst_large"
The second test run still tests the unmodified code. Even though the build step seems to build everything again.
My workaround at the moment is to "rm -rf" the build folder. So after each code change, I nuke the build folder, then configure, build from scratch and then run the tests.
- is duplicated by
-
QTBUG-94198 Targets '${target}_prepare_apk_dir' and '${target}_make_apk' are always rebuilt
-
- Closed
-
For Gerrit Dashboard: QTBUG-93431 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
348810,2 | Add proper dependencies to apk targets | dev | qt/qtbase | Status: MERGED | +2 | 0 |
353112,3 | Add proper dependencies to apk targets | 6.1 | qt/qtbase | Status: MERGED | +2 | 0 |